Fix horizontal card spacing in browse games page and wishlist page

--- a/client/src/css/recommendations.css
+++ b/client/src/css/recommendations.css
@@ -75,10 +75,6 @@ body {
 
 .card-body {
     box-sizing: border-box;
-    height: 100%;
-    border-right-color: lightgray;
-    border-right-style: solid;
-    border-right-width: 5px;
 }
 
 .ratingLine {
